[package]
name = "thd75-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Terminal UI for the Kenwood TH-D75 transceiver"
license = "MIT OR Apache-2.0"
authors = ["swiftraccoon"]

[dependencies]
kenwood-thd75 = { path = "../thd75" }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Common pedantic overrides for TUI code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
