[package]
name = "thd75-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Terminal UI for the Kenwood TH-D75 transceiver"
license = "GPL-2.0-or-later"
authors = ["swiftraccoon"]
repository = "https://github.com/swiftraccoon/kenwood"
readme = "../README.md"
keywords = ["ham-radio", "kenwood", "tui", "amateur-radio"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
kenwood-thd75 = { path = "../thd75" }
dstar-gateway-core = { path = "../dstar-gateway-core" }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Ban `#[allow]` — every suppression must be `#[expect(..., reason = "...")]`.
# Mirrors the root `[workspace.lints.clippy]` ban; restated here because this crate's
# `[lints]` block replaces the workspace one entirely (cargo does not merge).
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
# Binary crate with private modules: `pub(crate)` satisfies `unreachable_pub` but
# trips `redundant_pub_crate` (from the nursery group). The conflict is universal
# and would ordinarily inherit from workspace, but this block replaces workspace
# entirely so we restate it here.
redundant_pub_crate = "allow"
# KNOWN DIVERGENCE FROM WORKSPACE:
#
# The workspace denies these restriction lints (not repeated here):
#   undocumented_unsafe_blocks, missing_assert_message, missing_const_for_fn,
#   panic, unwrap_used, expect_used, indexing_slicing
#
# The TUI binary uses patterns these rules forbid (`.unwrap()` on channel sends to
# live receivers, direct buffer indexing in the Ratatui render loop, `.expect()` on
# known-connected transports, etc.) — adopting them would surface hundreds of sites,
# tracked separately.
#
# Previously this block also allowed `cast_possible_truncation`, `cast_sign_loss`,
# and `too_many_lines` at the crate level — removed so the workspace pedantic policy
# applies. The sites that genuinely need those suppressions now carry documented
# per-site `#[expect(..., reason = "...")]`.

# Mirrors the workspace `[lints.rustdoc]` block; restated here because this crate's
# `[lints]` block replaces the workspace one entirely.
[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
