[package]
name = "kenwood-thd75"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Async Rust library for controlling the Kenwood TH-D75 transceiver"
license = "MIT OR Apache-2.0"
repository = "https://git.wnc.dev/zoop/kenwood"
keywords = ["kenwood", "thd75", "ham-radio", "cat-protocol", "amateur-radio"]
categories = ["hardware-support", "encoding"]
authors = ["Dylan Hawkins <dylan@wnc.dev>"]

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util", "time"] }
tokio-serial = "5"
thiserror = "2"
tracing = "0.1"

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "test-util"] }

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
