[package]
name = "kenwood-thd75"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Async Rust library for controlling the Kenwood TH-D75 transceiver"
license = "GPL-2.0-or-later"
repository = "https://github.com/swiftraccoon/kenwood"
keywords = ["kenwood", "thd75", "ham-radio", "cat-protocol", "amateur-radio"]
categories = ["hardware-support", "encoding"]
authors = ["swiftraccoon"]
readme = "README.md"
documentation = "https://swiftraccoon.github.io/kenwood/"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util", "net", "time"] }
tokio-serial = "5"
thiserror = "2"
tracing = "0.1"
aprs = { path = "../aprs" }
aprs-is = { path = "../aprs-is" }
ax25-codec = { path = "../ax25-codec" }
dstar-gateway-core = { path = "../dstar-gateway-core" }
kiss-tnc = { path = "../kiss-tnc" }
mmdvm-core = { path = "../mmdvm-core" }
mmdvm = { path = "../mmdvm" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "test-util"] }

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
# Prevent accidental future regressions
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
# Ban `#[allow]` — every suppression must be `#[expect(..., reason = "...")]`.
# Mirrors the root `[workspace.lints.clippy]` ban; restated here because this crate's
# `[lints]` block replaces the workspace one entirely (cargo does not merge).
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
# Restriction-lint denies mirror the workspace — no divergence.
undocumented_unsafe_blocks = "deny"
missing_assert_message = "deny"
missing_const_for_fn = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
multiple_crate_versions = "allow"

# Mirrors the workspace `[lints.rustdoc]` block; restated here because this crate's
# `[lints]` block replaces the workspace one entirely.
[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
