[package]
name = "dstar-gateway-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dstar-gateway-core]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "dplus_decode_server_to_client"
path = "fuzz_targets/dplus_decode_server_to_client.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dplus_decode_client_to_server"
path = "fuzz_targets/dplus_decode_client_to_server.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dplus_parse_auth_response"
path = "fuzz_targets/dplus_parse_auth_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dextra_decode_server_to_client"
path = "fuzz_targets/dextra_decode_server_to_client.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dextra_decode_client_to_server"
path = "fuzz_targets/dextra_decode_client_to_server.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dcs_decode_server_to_client"
path = "fuzz_targets/dcs_decode_server_to_client.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dcs_decode_client_to_server"
path = "fuzz_targets/dcs_decode_client_to_server.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header_decode"
path = "fuzz_targets/header_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slow_data_descramble"
path = "fuzz_targets/slow_data_descramble.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dprs_parse"
path = "fuzz_targets/dprs_parse.rs"
test = false
doc = false
bench = false
